--- a/styles/style.css
+++ b/styles/style.css
@@ -1,8 +1,6 @@
 .page {
   min-width: 1100px;
   max-width: 1600px;
-  font-size: 16px;
-  line-height: 20px;
   margin: 0 auto;
   font-family: "Helvetica Neue", Arial, sans-serif;
   font-size: 16px;
@@ -24,7 +22,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
 }
 
 .logo {
@@ -35,10 +33,9 @@
 .nav__links {
   display: flex;
   column-gap: 20px;
-  margin-top: 8px;
+  margin: 0;
   list-style-type: none;
   padding: 0px;
-  margin: 0;
 }
 
 .nav__link {
@@ -198,31 +195,26 @@
 }
 
 .person_name_feynman {
-  position: absolute;
   top: -30px;
   left: 319px;
 }
 
 .person_name_burbidge {
-  position: absolute;
   top: 96px;
   right: 125px;
 }
 
 .person_name_cannon {
-  position: absolute;
   bottom: 18px;
   right: 216px;
 }
 
 .person_name_mitchell {
-  position: absolute;
   bottom: 82px;
   left: 142px;
 }
 
 .person_name_tarter {
-  position: absolute;
   top: 79px;
   left: 159px;
 }
@@ -343,21 +335,19 @@
   font-size: 44px;
   font-weight: 500;
   line-height: 52px;
-  column-gap: 40px;
 }
 
 .membership__steps {
   list-style-type: none;
-  margin: 100px 0 0;
+  margin: 100px 0 0 0;
   display: flex;
   justify-content: center;
   column-gap: 40px;
+  padding-left: 0;
 }
 
 .step {
-  display: flex;
   flex-basis: 220px;
-  flex-wrap: wrap;
 }
 
 .step__title {
@@ -382,8 +372,9 @@
   background-color: #1f1f1f;
   color: #fff;
   overflow: hidden;
-  position: relative;
   box-sizing: border-box;
+  display: flex;
+  position: relative;
 }
 
 .about__title {
@@ -391,9 +382,8 @@
   font-size: 20px;
   line-height: 30px;
   font-weight: 500;
-  position: relative;
-  z-index: 1;
   max-width: 154px;
+  z-index: 1;
 }
 
 .about__content {
@@ -401,20 +391,16 @@
   line-height: 30px;
   font-weight: 400;
   max-width: 660px;
-  position: relative;
-  left: 274px;
+  padding-left: 120px;
   z-index: 1;
-  top: -30px;
 }
 
 .about__paragraph {
   margin: 0;
-  display: flex;
-  flex-direction: column;
   margin-bottom: 32px;
 }
 
-.about__paragraph:nth-of-type(3n) {
+.about__paragraph:last-of-type {
   margin-bottom: 0;
 }
 
@@ -424,8 +410,8 @@
   height: 495px;
   border-radius: 50%;
   position: absolute;
-  top: -121px;
   left: -91px;
+  top: -121px;
   z-index: 0;
 }
 
@@ -458,7 +444,6 @@
 .footer__logo {
   height: 21px;
   width: 116px;
-  display: flex;
 }
 
 .footer__list {
@@ -468,12 +453,11 @@
 }
 
 .footer__list-item {
-  margin-top: 20px;
+  margin-top: 16px;
 }
 
 .footer__column-heading {
   margin: 0;
-  display: flex;
 }
 
 .footer__column-link {
