--- a/styles/style.css
+++ b/styles/style.css
@@ -35,7 +35,7 @@
   column-gap: 20px;
   margin: 0;
   list-style-type: none;
-  padding: 0px;
+  padding: 8px 0 0 0;
 }
 
 .nav__link {
@@ -425,20 +425,17 @@
 .footer__columns {
   font-size: 16px;
   line-height: 20px;
+  display: flex;
   min-height: 224px;
-  position: relative;
 }
 
 .footer__column_content_hours {
-  position: absolute;
-  right: 202px;
-  top: 0px;
+  margin-left: auto;
 }
 
 .footer__column_content_social {
-  position: absolute;
-  right: 0px;
-  top: 0px;
+  margin: 0;
+  padding-left: 100px;
 }
 
 .footer__logo {
@@ -453,11 +450,15 @@
 }
 
 .footer__list-item {
+  margin-top: 20px;
+}
+
+.footer__list-item:last-of-type {
   margin-top: 16px;
 }
 
 .footer__column-heading {
-  margin: 0;
+  margin: 0px;
 }
 
 .footer__column-link {
