--- a/styles/style.css
+++ b/styles/style.css
@@ -446,15 +446,14 @@
 .footer__list {
   list-style-type: none;
   padding: 0;
-  margin: 0;
 }
 
 .footer__list-item {
-  margin-top: 20px;
+  margin-top: 16px;
 }
 
-.footer__list-item:last-of-type {
-  margin-top: 16px;
+.footer__list-item:first-of-type {
+  margin-top: 20px;
 }
 
 .footer__column-heading {
